--- a/app/actors.side.html
+++ b/app/actors.side.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <title>Fight Club</title>
+    <title>Fight Club - Side actors</title>
+
+
+    <!-- build:css styles/vendor.css -->
+    <!-- bower:css -->
+    <!-- endbower -->
+    <!-- endbuild -->
 
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
@@ -12,8 +18,7 @@
 
   </head>
   <body>
-
-    <section class="header">
+    <section class="people">
       <div class="container">
         <nav>
           <div class="nav-collapse">
@@ -23,13 +28,13 @@
             <a href="index.html"><img src="images/logo.png" alt=""></a>
           </div>
           <ul class="menu">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="story.html">Story</a></li>
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#">Actors <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="actors.main.html">Main actors</a></li>
-                <li><a href="actros.side.html">Side actors</a></li>
+                <li><a href="actors.side.html">Side actors</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -50,77 +55,10 @@
           </ul>
         </nav>
 
-        <div class="video-trailer">
-          <iframe src="//www.youtube.com/embed/BdJKm16Co6M" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </section>
-
-    <section class="where-to-watch">
-      <div class="container">
-        <h1>Watch Fight Club by our retailers</h1>
-        <div class="row">
-          <div class="col-xs-6 col-md-6">
-            <article class="card-large">
-              <img src="images/providers/netflix.jpg" alt="">
-              <h2>Netflix</h2>
-              <p>Watch Movies & TV Shows Online or Streaming right to your TV via Xbox, Wii, PlayStation & many other devices.</p>
-            </article>
-          </div>
-          <div class="col-xs-6 col-md-6">
-            <article class="card-large">
-              <img src="images/providers/amazon.jpg" alt="">
-              <h2>Amazon</h2>
-              <p>Find, shop for and buy Amazon Instant Video at Amazon.com.</p>
-            </article>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-6 col-md-6">
-            <article class="card-large">
-              <img src="images/providers/itunes.jpg" alt="">
-              <h2>Itunes</h2>
-              <p>iTunes is the best way to organize and enjoy the music, movies, and TV shows you already have — and shop for the ones you want to get.</p>
-            </article>
-          </div>
-          <div class="col-xs-6 col-md-6">
-            <article class="card-large">
-              <img src="images/providers/bol.jpg" alt="">
-              <h2>Bol.com</h2>
-              <p>More than 9 million articles in bol.com, books and tablets to beauty and toys. Holiday Gifts and rapidly from 20, - free shipping!</p>
-            </article>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="people">
-      <div class="container">
-        <h1>People who made Fight Club happen</h1>
+        <h1>Fight Club's side actors</h1>
         <div class="cards">
           <div class="card-overflow">
             <div class="row">
-              <div class="col-xs-12 col-md-2">
-                <article class="card-small">
-                  <img src="images/actors/edward-norton.jpg" alt="Edward Norton">
-                  <h2>Edward Norton</h2>
-                  <p>Playing The Narrator</p>
-                </article>
-              </div>
-              <div class="col-xs-12 col-md-2">
-                <article class="card-small">
-                  <img src="images/actors/brad-pitt.jpg" alt="Brad Pitt">
-                  <h2>Brad Pitt</h2>
-                  <p>Playing Tyler Durden</p>
-                </article>
-              </div>
-              <div class="col-xs-12 col-md-2">
-                <article class="card-small">
-                  <img src="images/actors/helena-bonham-carter.jpg" alt="Helena Bonham Carter">
-                  <h2>Helena Bonham Carter</h2>
-                  <p>Playing Marla Singer</p>
-                </article>
-              </div>
               <div class="col-xs-12 col-md-2">
                 <article class="card-small">
                   <img src="images/actors/meat-loaf.jpg" alt="Meat Loaf">
@@ -142,8 +80,6 @@
                   <p>Playing Intern</p>
                 </article>
               </div>
-            </div>
-            <div class="row">
               <div class="col-xs-12 col-md-2">
                 <article class="card-small">
                   <img src="images/actors/david-andrews.jpg" alt="David Andrews">
@@ -188,39 +124,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="awards">
-      <div class="container">
-        <h1>Awards</h1>
-        <div class="col-xs-6 col-md-3">
-          <article class="card-small">
-            <img src="images/awards/empire-awards.jpeg" alt="Empire Awards, UK">
-            <h2>Empire Awards, UK</h2>
-            <p>Best British Actress Helena Bonham Carter </p>
-          </article>
-        </div>
-        <div class="col-xs-6 col-md-3">
-          <article class="card-small">
-            <img src="images/awards/jupiter-award.jpg" alt="Jupiter Award">
-            <h2>Jupiter Award</h2>
-            <p>Best International Actor Edward Norton </p>
-          </article>
-        </div>
-        <div class="col-xs-6 col-md-3">
-          <article class="card-small">
-            <h2>Online Film & Television Association</h2>
-            <p>Best Film Editing James Haygood</p>
-          </article>
-        </div>
-        <div class="col-xs-6 col-md-3">
-          <article class="card-small">
-            <img src="images/awards/ocfs.jpg" alt="Online Film Critics Society Awards">
-            <h2>Online Film Critics Society Awards</h2>
-            <p>Best DVD, Best DVD Special Features and Best DVD Commentary</p>
-          </article>
         </div>
       </div>
     </section>
